[gd_scene load_steps=43 format=3 uid="uid://d08kpmru1262x"]

[ext_resource type="Texture2D" uid="uid://b5njxmppj11mt" path="res://assets/Factions/Knights/Troops/Warrior/Red/Warrior_Red.png" id="1_msh4v"]
[ext_resource type="Script" path="res://src/scripts/enemy.gd" id="1_ojqc2"]
[ext_resource type="Texture2D" uid="uid://d3cxedfgljd0l" path="res://assets/Factions/Knights/Troops/Dead/Dead.png" id="2_c0ml6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dsd2l"]
atlas = ExtResource("1_msh4v")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxw5q"]
atlas = ExtResource("1_msh4v")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_40ksk"]
atlas = ExtResource("1_msh4v")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwt1q"]
atlas = ExtResource("1_msh4v")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_smc72"]
atlas = ExtResource("1_msh4v")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_edc37"]
atlas = ExtResource("1_msh4v")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_65d6g"]
atlas = ExtResource("1_msh4v")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo7tt"]
atlas = ExtResource("1_msh4v")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_km3vb"]
atlas = ExtResource("1_msh4v")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_88obs"]
atlas = ExtResource("2_c0ml6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtgh0"]
atlas = ExtResource("2_c0ml6")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bqr3"]
atlas = ExtResource("2_c0ml6")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_12oa0"]
atlas = ExtResource("2_c0ml6")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kd48"]
atlas = ExtResource("2_c0ml6")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jga1i"]
atlas = ExtResource("2_c0ml6")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdw3t"]
atlas = ExtResource("2_c0ml6")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_012bf"]
atlas = ExtResource("2_c0ml6")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_poi51"]
atlas = ExtResource("2_c0ml6")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7s8br"]
atlas = ExtResource("2_c0ml6")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyr58"]
atlas = ExtResource("2_c0ml6")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmpcm"]
atlas = ExtResource("2_c0ml6")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0lov"]
atlas = ExtResource("2_c0ml6")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki22n"]
atlas = ExtResource("2_c0ml6")
region = Rect2(768, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqq03"]
atlas = ExtResource("1_msh4v")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqss0"]
atlas = ExtResource("1_msh4v")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm6k8"]
atlas = ExtResource("1_msh4v")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0i7b"]
atlas = ExtResource("1_msh4v")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3pl3"]
atlas = ExtResource("1_msh4v")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ig16"]
atlas = ExtResource("1_msh4v")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq0lb"]
atlas = ExtResource("1_msh4v")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_afwl8"]
atlas = ExtResource("1_msh4v")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rudit"]
atlas = ExtResource("1_msh4v")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6iy6"]
atlas = ExtResource("1_msh4v")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_b34j0"]
atlas = ExtResource("1_msh4v")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qkn5"]
atlas = ExtResource("1_msh4v")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_bn610"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsd2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxw5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40ksk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwt1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smc72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edc37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65d6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo7tt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km3vb")
}],
"loop": true,
"name": &"attaking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88obs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtgh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bqr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12oa0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kd48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jga1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdw3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_012bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poi51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7s8br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyr58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmpcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0lov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki22n")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqq03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqss0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm6k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0i7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3pl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ig16")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq0lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afwl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rudit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6iy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b34j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qkn5")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6euqh"]
radius = 127.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ynje8"]
height = 68.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cqufn"]
radius = 59.6825

[node name="Enemy" type="CharacterBody2D"]
z_index = 4
y_sort_enabled = true
script = ExtResource("1_ojqc2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 4
sprite_frames = SubResource("SpriteFrames_bn610")
animation = &"dead"
frame_progress = 0.996826

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(1, -11)
shape = SubResource("CircleShape2D_6euqh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ynje8")
debug_color = Color(0.987877, 0.0948051, 0.119113, 0.42)

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CircleShape2D_cqufn")
debug_color = Color(0, 1, 0.262745, 0.419608)

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 2.6

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
